infrastructure/monitoring-opensearch/dashboards.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &PODNAME monitoring-dashboards
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: *PODNAME
  template:
    metadata:
      labels:
        app.kubernetes.io/component: *PODNAME
    spec:
      containers:
      - name: *PODNAME
        image: opensearchproject/opensearch-dashboards:latest
        ports: 
          - name: web
            containerPort: 5601
        resources:
          limits:
            cpu: '0.1'
            memory: '512M'
          requests:
            cpu: '0.01'
            memory: '320M'
