infrastructure/monitoring-opensearch/server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &PODNAME monitoring-opensearch-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: *PODNAME
  template:
    metadata:
      labels:
        app.kubernetes.io/component: *PODNAME
    spec:
      volumes:
      - name: *PODNAME
        persistentVolumeClaim:
          claimName: *PODNAME
      containers:
      - name: *PODNAME
        image: opensearchproject/opensearch:latest
        volumeMounts:
          - mountPath: /usr/share/opensearch/data
            name: *PODNAME
        ports: 
          - name: api
            containerPort: 9200
          - name: performance
            containerPort: 9600
        # resources:
        #   limits:
        #     cpu: '1'
        #     memory: '1G'
        #   requests:
        #     cpu: '0.1'
        #     memory: '640M'
