infrastructure/monitoring-opensearch/dashboards.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &PODNAME monitoring-dashboards
spec: 
  selector:
    app.kubernetes.io/component: *PODNAME
  ports:
  - name: web
    port: 80
    targetPort: 5601
